--- a/css/estilos.css
+++ b/css/estilos.css
@@ -35,6 +35,8 @@
     width: 22rem;
     float: right;
     grid-area: imagen_modelo;
+    -webkit-animation: imagen_modelo 1.1s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    animation: imagen_modelo 1.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
 
 .titulo{
@@ -52,6 +54,7 @@
 p{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
 .footer{
     background-color: black;
     color: white;
@@ -190,6 +193,24 @@ p{
         padding-bottom: 2vh;
     }
 }
+
+@-webkit-keyframes imagen_modelo {
+    0% {
+    opacity: 0;
+    }
+    100% {
+    opacity: 1;
+    }
+}
+@keyframes imagen_modelo {
+    0% {
+    opacity: 0;
+    }
+    100% {
+    opacity: 1;
+    }
+}
+
 
 @media screen and (min-width: 768px){
 
