--- a/css/estiloSass.css
+++ b/css/estiloSass.css
@@ -40,7 +40,6 @@
   padding: 1rem;
   bottom: 0px;
   width: 100%;
-  position: fixed;
 }
 .footer .navegacion {
   display: flex;
@@ -105,6 +104,8 @@
 
 /* FIN INDEX*/
 /* Mujer */
+/*Atributos*/
+/* Fin de atributos*/
 .infoM {
   margin: 50px 200px;
 }
@@ -129,7 +130,6 @@
 
 .infoDeCarteraCiervo {
   grid-area: infoDeCarteraCiervo;
-  justify-self: left;
   line-height: 5px;
   align-self: center;
   text-align: left center;
