--- a/css/estiloSass.css
+++ b/css/estiloSass.css
@@ -112,6 +112,10 @@
   line-height: 5px;
   align-self: center;
   text-align: left center;
+  background-color: gray;
+  margin: 0px 0px;
+  padding: 35px 30px;
+  padding-left: 35px;
 }
 
 #carouselCarteraV {
@@ -123,6 +127,10 @@
   grid-area: infoDeCarteraWaffle;
   justify-self: right;
   line-height: 5px;
+  background-color: gray;
+  margin: 0px 0px;
+  padding: 40px 30px;
+  padding-left: 10.5vh;
 }
 
 #carouselCarteraWaffle {
@@ -135,6 +143,10 @@
   line-height: 5px;
   align-self: center;
   text-align: left center;
+  background-color: gray;
+  margin: 0px 0px;
+  padding: 35px 30px;
+  padding-left: 35px;
 }
 
 #carouselCarteraCiervo {
@@ -146,6 +158,10 @@
   grid-area: infoDeCarteraCuadro;
   justify-self: right;
   line-height: 5px;
+  background-color: gray;
+  margin: 0px 0px;
+  padding: 40px 30px;
+  padding-left: 10.5vh;
 }
 
 #carouselCarteraCuadro {
@@ -161,6 +177,7 @@
   align-items: center;
   justify-self: center;
   margin: 6%;
+  padding: 0px;
 }
 
 #grillaProductosMujer .tituloM {
@@ -220,8 +237,40 @@
     padding-bottom: 10px;
   }
 
+  .infoDeCarteraV {
+    background-color: gray;
+    margin: 0px 0px;
+    padding: 10px 20px;
+    padding-left: 10px;
+    align-self: center;
+  }
+
+  .infoDeCarteraWaffle {
+    background-color: gray;
+    margin: 0px 0px;
+    padding: 10px 20px;
+    padding-left: 10px;
+    align-self: center;
+  }
+
+  .infoDeCarteraCiervo {
+    background-color: gray;
+    margin: 0px 0px;
+    padding: 10px 20px;
+    padding-left: 10px;
+    align-self: center;
+  }
+
+  .infoDeCarteraCuadro {
+    background-color: gray;
+    margin: 0px 0px;
+    padding: 10px 20px;
+    padding-left: 10px;
+    align-self: center;
+  }
+
   #grillaProductosMujer {
-    grid-template-areas: "carteraV" "infoDeCarteraV" "carteraWaffle" "infoDeCarteraWaffle" "carteraCiervo" "infoDeCarteraCiervo" "carteraCuadro" "infoDeCarteraCuadro";
+    grid-template-areas: "CarteraV" "infoDeCarteraV" "CarteraWaffle" "infoDeCarteraWaffle" "CarteraCiervo" "infoDeCarteraCiervo" "CarteraCuadro" "infoDeCarteraCuadro";
     grid-template-columns: 1fr;
     grid-template-rows: 37vh 10vh 37vh 10vh 37vh 10vh 37vh 10vh;
     padding-bottom: 10vh;
