--- a/css/estiloSass.scss
+++ b/css/estiloSass.scss
@@ -40,11 +40,13 @@
     padding: 1rem;
     bottom: 0px;
     width: 100%;
+    position: fixed;
 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     .navegacion{
-        display: flex;
         padding-right: 30px;
-        flex-direction: column;
     }
 }
 
@@ -259,10 +261,21 @@ $Cartera:(
     }
 }
 
+/*COMENTARIOS*/
+
+.formComen{
+    margin: 15px;
+    padding: 20px;
+    border: 1px black;
+    .buttonEnviar{
+        margin-top: 15px;
+        position: center;
+        padding: 12px;
+    }
+}
 
 
-
-@media screen and (max-width: 480px){
+@media screen and (max-width: 530px){
 
     .headerTitle{
         font-size: larger;
@@ -289,9 +302,9 @@ $Cartera:(
 
         .imagen_modelo{
             size: 100vh;
-            margin: 0px;
-            padding: 0px;
+            margin-top: 4px;
             float:none;
+            align-items: center;
         }
     }
     
@@ -375,7 +388,12 @@ $Cartera:(
     .infoM{
         margin: 10px 20px;
     }
-
+    .tituloM__Descripcion{
+        text-align: left;
+    }
+    .tituloM{
+        text-align: left;
+    }
 /*INFORMACION*/
 
     #mapa-aspecto{
@@ -414,17 +432,27 @@ $Cartera:(
     }
 }
 
-@media screen and (min-width: 560px) and (max-width: 850px){
+@media screen and (min-width: 531px){
 
     #grid{
-        grid-template-rows: 100px 2vh auto 18vh;
+        grid-template-areas:
+        "titulo imagen_modelo"
+        "informacion imagen_modelo"
+        ;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 47px 58vh;
+        flex-direction: column;
+        padding: 0px;
     }
-
     #mochMedida{
         display: none;
     }
 
     #mochBolsillos{
+        display: none;
+    }
+
+    #mochV{
         display: none;
     }
 
@@ -470,6 +498,11 @@ a{
     color: white;
 }
 
+@media screen and (min-width: 740px){
+    #mochV{
+        display: block;
+    }
+}
 @mixin fondoBox ($width, $height, $left){
     background-color: gray;
     margin: 0px 0px;
