--- a/css/estiloSass.css
+++ b/css/estiloSass.css
@@ -59,6 +59,22 @@
   padding-left: 15px;
 }
 
+#modalCarrito {
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: rgba(17, 17, 17, 0.7411764706);
+}
+
+.modalConteiner {
+  background-color: #ffffff;
+  width: 85%;
+  max-width: 600px;
+  max-height: 80%;
+  margin: auto;
+}
+
 /* Index */
 #grid {
   display: grid;
